# APE

./: .env.example  .gitignore  PROJECT_CONTEXT.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: pr-validation.yml
dashboard/: README.md  package-lock.json  package.json  tsconfig.json  tsconfig.test.json
dashboard/scripts/: verify-build-context.mjs
docs/: NOTION_HANDOFF_TEMPLATE.md  PR10A_COMPLIANCE.md  PR10B_COMPLIANCE.md  PR11A_RESEARCH_RUNTIME.md  PR11B_COMPLIANCE.md  PR11C_COMPLIANCE.md  PR11D_COMPLIANCE.md  PR11E_COMPLIANCE.md  PR11F_COMPLIANCE.md  PR11_COMPLIANCE.md  PR_RUNBOOK.md  RAILWAY.md  RESEARCH_AND_CALIBRATION.md  VERCEL.md
scripts/: __init__.py  pr11_test_shards.py  railway_migrate.py  railway_start_api.py  railway_start_worker.py  research_smoke.py
tests/: test_api_health.py  test_calibration.py  test_candidate_governance_evidence.py  test_candidate_pin.py  test_config.py  test_db_schema.py  test_db_session.py  test_kalshi_auth.py  test_kalshi_client.py  test_kalshi_resolver.py  test_kalshi_ws_client.py  test_kalshi_ws_collector.py  test_kalshi_ws_messages.py  test_momentum_v2.py  test_pr10a_scope_contract.py  test_pr10b_scope_contract.py  test_pr11_scope_contract.py  test_pr11b_scope_contract.py  test_pr11c_scope_contract.py  test_pr11d_postgres_migration.py  test_pr11e_scope_contract.py  test_pr11f_scope_contract.py  test_railway_scripts.py  test_reference_brti_messages.py  test_reference_brti_status.py  test_replay_engine.py  test_repositories.py  test_requirements.py  test_research_api.py  test_research_archive.py  test_research_calibration.py  test_research_fees.py  test_research_helpers.py  test_research_repository.py  test_research_runtime.py  test_research_worker.py  test_safety.py  test_storage_api.py  test_storage_retention.py  test_strategy_api.py  (+3 more)
(+182 files in other folders)
