[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "ape"
version = "0.1.0"
description = "Observer-only foundation for the APE BTC15 Kalshi momentum bot."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.0,<9.0",
  "ruff>=0.8,<1.0",
]

[project.scripts]
ape-api = "ape.api.main:main"
ape-worker = "ape.worker.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ape"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
